--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2694,107 +2694,107 @@ stories:
   domain: http://www.observer.com/
   link: https://www.moultrieobserver.com/news/ga_fl_news/department-of-family-and-children-services-celebrates-family-reunification/article_f0197e3b-b590-51d5-b9e2-5d7c5ec5352c.html
 images:
-- name: adam-smith-adam-smith-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-3.jpg
-- name: school-clouds-church-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit.jpg
-- name: beach-rocks-beach-rocks-currents-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-post-modern.jpg
-- name: berlinwall2-berlinwall-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-electricity.jpg
-- name: windowmountain-window-mountain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-far-away.jpg
-- name: oldhouse-granaryfield-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
-- name: aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-schoolhouse-clouds-dark-dali.jpg
-- name: store-on-corner-store-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gred-mash.jpg
-- name: docks-docks-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
-- name: carry-load-carryload-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
-- name: amusement-park-amusement-park-2-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kandinsky-bv.jpg
-- name: hollywood-building-hollywood-building-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
-- name: containership-containership-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-nazi-poster.jpg
-- name: locked-up-steam-lock-up-steam-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
-- name: meadowbutterfly-meadow-butterfly-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-far-away.jpg
-- name: lincoln-memorial-lincolnmemorial-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-alien-goggles.jpg
-- name: bordercrossing-bordercrossing-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-matrix.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: san-francisco-street-view-san-francisco-street-view-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-constitution.jpg
-- name: paris-paris-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
-- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-- name: border-fence-border-fence-on-hill-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dali-two.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: castle-wall-DSC-0067-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smoking-cigarette.JPG
-- name: abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-- name: aws-s3-stories-new-oldbarn-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-oldbarn-dark-dali.jpg
-- name: sand-hand-sand-hand-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-post-modern.jpg
-- name: locked-up-steam-lock-up-steam-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-dys-1.jpg
-- name: blossombar-dark-rain-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
-- name: docks-docks-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-space-pizza.jpg
-- name: ellis-island-ellisisland-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-light-dali.jpg
-- name: downtheline-downtheline-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
-- name: miamibeach-miamibeach-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
-- name: old-door-lock-old-door-lock-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
-- name: gypsymosaic-gypsy-eyes-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-4.jpg
-- name: berlinwall2-berlinwall-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purp-paper.jpg
-- name: castle-wall-DSC-0067-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
-- name: walled-garden-walled-garden-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
-- name: docks-docks-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+- name: bluelake-dry-skin-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-00-00.jpg
+- name: aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
+- name: machine-road-machine-road-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
+- name: containership-containership-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kandinsky-bv.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
+- name: supreme-court-supremecourt-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-two.jpg
+- name: stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-ww2-dresden.JPG
+- name: stories-server-racks-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-copper-circuit.jpg
+- name: downtown-los-angeles-downtown-la-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-dali.JPG
+- name: yosemite-yosemite-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purple-pond.jpg
+- name: bluelake-purple-pond-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-00-00.jpg
+- name: machine-road-machine-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-brush.jpg
+- name: powerlines-power-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-bright-sand.jpg
+- name: supreme-court-supremecourt-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-matrix.jpg
+- name: gears-4882162452-fa3126b38d-b-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crabapple.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-4.jpg
+- name: server-cloud-server-racks-door-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
+- name: mediterranean-mediterranean-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-pablo-blue.jpg
+- name: amusement-park-amusement-park-2-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-satan-red.jpg
+- name: status-berlin-status-berlin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
+- name: desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-light-dali.jpg
+- name: walled-garden-walled-garden-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-alberto-giacometti.jpg
+- name: power-lines-power-lines-empty-space-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-emily-carr.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
 - name: christianity-christianity-under-construction-internet-numbers.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-internet-numbers.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
-- name: docks-docks-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-wols.jpg
-- name: downtown-los-angeles-downtown-la-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit.JPG
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-- name: miamibeach-miamibeach-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-blocks.jpg
-- name: berlinwall-DSC-0084-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dry-skin.jpg
-- name: nyc-flag-nycflag-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-three.jpg
-- name: white-house-whitehouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
+- name: blossombar-purp-paper-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-24-99.jpg
+- name: aws-s3-stories-status-berlin-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-matrix.jpg
+- name: mediterranean-mediterranean-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-monet-one.jpg
+- name: oldcabin-store-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-far-away.jpg
+- name: blossombar-clean-view-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-00-00.jpg
+- name: fence-fence-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
+- name: nazi-invasion-DSC_0079.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0079.jpg
+- name: ellis-island-ellisisland-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-electricity.jpg
+- name: walled-garden-walled-garden-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-plentiful.jpg
+- name: udnie-IMG_8358.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
+- name: anza-borrego-desert-state-park.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/anza-borrego-desert-state-park.jpg
+- name: dragon-desert-desert-dragon-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smooth-ride.jpg
+- name: amusement-park-amusement-park-2-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-marcel-duchamp.jpg
+- name: stories-oldgaspumps-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-oldgaspumps-umberto-bocc.jpg
+- name: downtheline-downtheline-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
+- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+- name: gears-4882162452-fa3126b38d-b-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-post-modern.jpg
+- name: yosemite-yosemite-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-satan-red.jpg
+- name: walled-garden-walled-garden-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-nazi-poster.jpg
+- name: abandonedbuildings_smoking_cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smoking_cigarette.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: adam-smith-adam-smith-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
+- name: server-cloud1-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit-5.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: aws-s3-royalroads-royalroads-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
 ---
 Rains Lower Hay Production.&nbsp;Let Them Eat Toast.&nbsp;Devon Allen Signs With Nike.&nbsp;Animated Gremlins Prequel In The Works.&nbsp;The Season Of Giving.&nbsp;Sheriff's Office Loses Accreditation After Parkland Shooting.&nbsp;Evers Facing Pressure To Sign Wisconsin Budget.&nbsp;Hyndman Loaned To Atlanta By Bournemouth.&nbsp;
